--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <meta name="author" content="Sheng-Yen Chou">    
   <meta name="viewport" content="width=device-width, initial-scale=1">  
-  <link rel="shortcut icon" href="./assets/icon.png">
+  <link rel="shortcut icon" href="./assets/gold_empty_circle.svg">
   <meta name="description" content="Sheng-Yen Chou ">
   <meta name="keywords" content="Sheng-Yen, Sheng-Yen Chou, Machine Learning, Deep Learning, Robustness, Robust, Trustworthy AI, Machine, Learning, Diffusion Model, Backdoor Attack, Stable Diffusion, National Tsing Hua University, The Chinese University of Hong Kong">
   <meta name="Sheng-Yen Chou's Homepage" http-equiv="Content-Type" content="Sheng-Yen Chou's Homepagee">
