--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </td> -->
                 <td width="75%" valign="top" align="justify">
                   <p>
-                    I am a research asistant at The Chinese University of Hong Kong (CUHK). I am interested in physic-informed machine learning and trustworthy AI. 
+                    I am a research asistant at The Chinese University of Hong Kong (CUHK). I am interested in physic-informed machine learning, trustworthy AI, and reinforcement learning (sometimes plays with distributed system). My goal is to build a reliable AI system that can be impact the real world massively. 
                   </p>
                   <p>
                     I received Bachelor's degree in Computer Science from National Tsing Hua University (NTHU). Before graduate, I was also a research assistant at DataLab and advised by <a href="http://www.cs.nthu.edu.tw/~shwu/" target="_blank">Prof. Shan-Hung Wu</a>. It's my pleasure to work with <a href="https://sites.google.com/site/pinyuchenpage" target="_blank">Dr. Pin-Yu Chen</a> and <a href="https://www.cse.cuhk.edu.hk/people/faculty/tsung-yi-ho/" target="_blank">Prof. Tsung-Yi Ho</a> after graduate.
