update GA-NTK version

--- a/index.html
+++ b/index.html
@@ -189,15 +189,15 @@
 
               <tr>
                 <td width="33%" valign="top" align="center">
-                  <a href="https://arxiv.org/abs/2204.04090v6" target="_blank">
+                  <a href="https://arxiv.org/abs/2204.04090" target="_blank">
                   <img src="publications/tri_roof.jpg" alt="sym" width="100%" style="border-radius:10px"></a>
                 </td>
                 <td height=200 width="67%" valign="top">
-                  <p><a id="arxiv22_gatntk" href="https://arxiv.org/abs/2204.04090v6" target="_blank">
+                  <p><a id="arxiv22_gatntk" href="https://arxiv.org/abs/2204.04090" target="_blank">
                   <heading>Single-level Adversarial Data Synthesis based on Neural Tangent Kernels</heading></a><br>
-                  Yu-Rong Zhang, <u><b>Sheng-Yen Chou</b></u>, Shan-Hung Wu<br>
+                  Yu-Rong Zhang, Ruei-Yang Su, <u><b>Sheng-Yen Chou</b></u>, Shan-Hung Wu<br>
                   ArXiv Preprint<br>
-                  <a href="https://arxiv.org/abs/2204.04090v6" target="_blank">Paper</a> 
+                  <a href="https://arxiv.org/abs/2204.04090" target="_blank">Paper</a> 
                   <!-- / -->
                   <!-- <a href="https://icml.cc/virtual/2021/spotlight/10216" target="_blank">Video</a> /
                   <a href="publications/ntga_slide.pdf" target="_blank">Slide</a> /
