update BadDiffusion accepted by CVPR'23

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                   <p><a id="arxiv22_baddiffusion" href="https://arxiv.org/abs/2212.05400" target="_blank">
                   <heading>How to Backdoor Diffusion Models?</heading></a><br>
                   <u><b>Sheng-Yen Chou</b></u>, Pin-Yu Chen, Tsung-Yi Ho<br>
-                  ArXiv Preprint<br>
+                  CVPR'23<br>
                   <a href="https://arxiv.org/abs/2212.05400"" target="_blank">Paper</a>
                   </p>
                   <p>Proposed a new backdoor attack on the diffusion models. We found that the attacker can embed a backdoor into the diffusion models with 5% poison rate and 50 epoch fine-tuning.</p>
