--- a/index.html
+++ b/index.html
@@ -145,7 +145,12 @@
                 </th> -->
 
                 <th width="15%" valign="top" align="center">
-                <a href="https://nthu-en.site.nthu.edu.tw/" target="_blank"><img src="assets/logo_cuhk.png" alt="sym" width="45%"></a>
+                <a href="https://www.cmu.edu/" target="_blank"><img src="assets/logo_cmu.png" alt="sym" width="25%"></a>
+                <p style="line-height:1.3; font-size:12pt">Carnegie Mellon University<br>Safe AI Lab, Research Internship<br>Jun. 23 - Present</p>
+                </th>
+
+                <th width="15%" valign="top" align="center">
+                <a href="https://www.cuhk.edu.hk/english/index.html" target="_blank"><img src="assets/logo_cuhk.png" alt="sym" width="45%"></a>
                 <p style="line-height:1.3; font-size:12pt">The Chinese University Hong Kong<br>Research Assistant<br>Jul. 22 - Present</p>
                 </th>
 
@@ -180,7 +185,7 @@
                   <p><a id="arxiv22_baddiffusion" href="https://arxiv.org/abs/2212.05400" target="_blank">
                   <heading>How to Backdoor Diffusion Models?</heading></a><br>
                   <u><b>Sheng-Yen Chou</b></u>, Pin-Yu Chen, Tsung-Yi Ho<br>
-                  CVPR'23, ICLR'23 BANDS Workshop Oral<br>
+                  CVPR'23, ICLR'23 BANDS Workshop Best Paper Award<br>
                   <a href="https://arxiv.org/abs/2212.05400"" target="_blank">Paper</a>
                   </p>
                   <p>Proposed a new backdoor attack on the diffusion models. We found that the attacker can embed a backdoor into the diffusion models with 5% poison rate and 50 epoch fine-tuning.</p>
