--- a/index.html
+++ b/index.html
@@ -178,6 +178,22 @@
             <tbody>
               <tr>
                 <td width="33%" valign="top" align="center">
+                  <!-- <a href="https://arxiv.org/abs/2212.05400" target="_blank"> -->
+                  <img src="publications/viallan_diff_feature_graph.jpg" alt="sym" width="100%" style="border-radius:10px"></a>
+                </td>
+                <td height=200 width="67%" valign="top">
+                  <!-- <p><a id="arxiv22_villandiffusion" href="https://arxiv.org/abs/2212.05400" target="_blank"> -->
+                  <heading>VillanDiffusion: A Unified Backdoor Attack Framework for Diffusion Models</heading></a><br>
+                  <u><b>Sheng-Yen Chou</b></u>, Pin-Yu Chen, Tsung-Yi Ho<br>
+                  Under Submit<br>
+                  <!-- <a href="https://arxiv.org/abs/2212.05400"" target="_blank">Paper</a> -->
+                  </p>
+                  <p>Proposed a backdoor attack on the diffusion models with broader settings, including score-based models, various samplers, and text triggers.</p>
+                </td>
+              </tr>
+
+              <tr>
+                <td width="33%" valign="top" align="center">
                   <a href="https://arxiv.org/abs/2212.05400" target="_blank">
                   <img src="publications/feature_graph.png" alt="sym" width="100%" style="border-radius:10px"></a>
                 </td>
