update CV and VillanDiffusion Arxiv

--- a/index.html
+++ b/index.html
@@ -178,15 +178,15 @@
             <tbody>
               <tr>
                 <td width="33%" valign="top" align="center">
-                  <!-- <a href="https://arxiv.org/abs/2212.05400" target="_blank"> -->
+                  <a href="https://arxiv.org/abs/2306.06874" target="_blank">
                   <img src="publications/viallan_diff_feature_graph.jpg" alt="sym" width="100%" style="border-radius:10px"></a>
                 </td>
                 <td height=200 width="67%" valign="top">
-                  <!-- <p><a id="arxiv22_villandiffusion" href="https://arxiv.org/abs/2212.05400" target="_blank"> -->
+                  <p><a id="arxiv22_villandiffusion" href="https://arxiv.org/abs/2306.06874" target="_blank">
                   <heading>VillanDiffusion: A Unified Backdoor Attack Framework for Diffusion Models</heading></a><br>
                   <u><b>Sheng-Yen Chou</b></u>, Pin-Yu Chen, Tsung-Yi Ho<br>
                   Under Submit<br>
-                  <!-- <a href="https://arxiv.org/abs/2212.05400"" target="_blank">Paper</a> -->
+                  <a href="https://arxiv.org/abs/2306.06874"" target="_blank">Paper</a>
                   </p>
                   <p>Proposed a backdoor attack on the diffusion models with broader settings, including score-based models, various samplers, and text triggers.</p>
                 </td>
