--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                   <p><a id="arxiv22_villandiffusion" href="https://arxiv.org/abs/2306.06874" target="_blank">
                   <heading>VillanDiffusion: A Unified Backdoor Attack Framework for Diffusion Models</heading></a><br>
                   <u><b>Sheng-Yen Chou</b></u>, Pin-Yu Chen, Tsung-Yi Ho<br>
-                  Under Submit<br>
+                  NeurIPS 2023<br>
                   <a href="https://arxiv.org/abs/2306.06874"" target="_blank">Paper</a>
                   </p>
                   <p>Proposed a backdoor attack on the diffusion models with broader settings, including score-based models, various samplers, and text triggers.</p>
