--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
                 <p style="line-height:1.3; font-size:12pt">MIT-IBM Watson AI Lab<br>External Student<br>Oct. 21 - Nov. 21</p>
                 </th> -->
 
-                <th width="15%" valign="top" align="center">
+                <!-- <th width="15%" valign="top" align="center">
                 <a href="https://www.cmu.edu/" target="_blank"><img src="assets/logo_cmu.png" alt="sym" width="25%"></a>
                 <p style="line-height:1.3; font-size:12pt">Carnegie Mellon University<br>Safe AI Lab, Research Internship<br>Jun. 23 - Present</p>
-                </th>
+                </th> -->
 
                 <th width="15%" valign="top" align="center">
                 <a href="https://www.cuhk.edu.hk/english/index.html" target="_blank"><img src="assets/logo_cuhk.png" alt="sym" width="45%"></a>
