--- a/index.html
+++ b/index.html
@@ -207,6 +207,26 @@
                   <p>Proposed a new backdoor attack on the diffusion models. We found that the attacker can embed a backdoor into the diffusion models with 5% poison rate and 50 epoch fine-tuning.</p>
                 </td>
               </tr>
+              <tr>
+                <td width="33%" valign="top" align="center">
+                  <a href="https://arxiv.org/abs/2312.00050" target="_blank">
+                  <img src="publications/ball.jpg" alt="sym" width="100%" style="border-radius:10px"></a>
+                </td>
+                <td height=200 width="67%" valign="top">
+                  <p><a id="arxiv22_gatntk" href="https://arxiv.org/abs/2312.00050" target="_blank">
+                  <heading>Elijah: Eliminating Backdoors Injected in Diffusion Models via Distribution Shift</heading></a><br>
+                  Shengwei An, <u><b>Sheng-Yen Chou</b></u>, Kaiyuan Zhang, Qiuling Xu, Guanhong Tao, Guangyu Shen, Siyuan Cheng, Shiqing Ma, Pin-Yu Chen, Tsung-Yi Ho, Xiangyu Zhang<br>
+                  AAAI'24, NeurIPS'23 BUGS Workshop<br>
+                  <a href="https://arxiv.org/abs/2312.00050" target="_blank">Paper</a> 
+                  <!-- / -->
+                  <!-- <a href="https://icml.cc/virtual/2021/spotlight/10216" target="_blank">Video</a> /
+                  <a href="publications/ntga_slide.pdf" target="_blank">Slide</a> /
+                  <a href="https://github.com/lionelmessi6410/ntga" target="_blank">Code</a> /
+                  <a href="https://www.kaggle.com/c/unlearnable-cifar-10" target="_blank">Competition</a> -->
+                  </p>
+                  <p>Proposed backdoor detection and removal algorithms for backdoor diffusion models.</p>
+                </td>
+              </tr>
 
               <tr>
                 <td width="33%" valign="top" align="center">
