add Relax Trigger

--- a/index.html
+++ b/index.html
@@ -227,6 +227,26 @@
                   <p>Proposed backdoor detection and removal algorithms for backdoor diffusion models.</p>
                 </td>
               </tr>
+              <tr>
+                <td width="33%" valign="top" align="center">
+                  <a href="https://arxiv.org/abs/2311.16646" target="_blank">
+                  <img src="publications/forest.jpg" alt="sym" width="100%" style="border-radius:10px"></a>
+                </td>
+                <td height=200 width="67%" valign="top">
+                  <p><a id="arxiv23_relax_trigger" href="https://arxiv.org/abs/2311.16646" target="_blank">
+                  <heading>Rethinking Backdoor Attacks on Dataset Distillation: A Kernel Method Perspective</heading></a><br>
+                  Ming-Yu Chung, <u><b>Sheng-Yen Chou</b></u>, Chia-Mu Yu, Pin-Yu Chen, Sy-Yen Kuo, Tsung-Yi Ho<br>
+                  Submitted to ICLR'24<br>
+                  <a href="https://arxiv.org/abs/2311.16646" target="_blank">Paper</a> 
+                  <!-- / -->
+                  <!-- <a href="https://icml.cc/virtual/2021/spotlight/10216" target="_blank">Video</a> /
+                  <a href="publications/ntga_slide.pdf" target="_blank">Slide</a> /
+                  <a href="https://github.com/lionelmessi6410/ntga" target="_blank">Code</a> /
+                  <a href="https://www.kaggle.com/c/unlearnable-cifar-10" target="_blank">Competition</a> -->
+                  </p>
+                  <p>Proposed a computational-effiecient backdoor attack on data distillation based on NTK theory.</p>
+                </td>
+              </tr>
 
               <tr>
                 <td width="33%" valign="top" align="center">
