--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                   <p><a id="arxiv22_villandiffusion" href="https://arxiv.org/abs/2306.06874" target="_blank">
                   <heading>VillanDiffusion: A Unified Backdoor Attack Framework for Diffusion Models</heading></a><br>
                   <u><b>Sheng-Yen Chou</b></u>, Pin-Yu Chen, Tsung-Yi Ho<br>
-                  NeurIPS 2023<br>
+                  NeurIPS 2023, NeurIPS 2023 BUGS Workshop Oral<br>
                   <a href="https://arxiv.org/abs/2306.06874"" target="_blank">Paper</a>
                   </p>
                   <p>Proposed a backdoor attack on the diffusion models with broader settings, including score-based models, various samplers, and text triggers.</p>
@@ -201,7 +201,7 @@
                   <p><a id="arxiv22_baddiffusion" href="https://arxiv.org/abs/2212.05400" target="_blank">
                   <heading>How to Backdoor Diffusion Models?</heading></a><br>
                   <u><b>Sheng-Yen Chou</b></u>, Pin-Yu Chen, Tsung-Yi Ho<br>
-                  CVPR'23, ICLR'23 BANDS Workshop Best Paper Award<br>
+                  CVPR 2023, ICLR 2023 BANDS Workshop Best Paper Award<br>
                   <a href="https://arxiv.org/abs/2212.05400"" target="_blank">Paper</a>
                   </p>
                   <p>Proposed a new backdoor attack on the diffusion models. We found that the attacker can embed a backdoor into the diffusion models with 5% poison rate and 50 epoch fine-tuning.</p>
@@ -216,7 +216,7 @@
                   <p><a id="arxiv22_gatntk" href="https://arxiv.org/abs/2312.00050" target="_blank">
                   <heading>Elijah: Eliminating Backdoors Injected in Diffusion Models via Distribution Shift</heading></a><br>
                   Shengwei An, <u><b>Sheng-Yen Chou</b></u>, Kaiyuan Zhang, Qiuling Xu, Guanhong Tao, Guangyu Shen, Siyuan Cheng, Shiqing Ma, Pin-Yu Chen, Tsung-Yi Ho, Xiangyu Zhang<br>
-                  AAAI'24, NeurIPS'23 BUGS Workshop<br>
+                  AAAI 2024, NeurIPS 2023 BUGS Workshop<br>
                   <a href="https://arxiv.org/abs/2312.00050" target="_blank">Paper</a> 
                   <!-- / -->
                   <!-- <a href="https://icml.cc/virtual/2021/spotlight/10216" target="_blank">Video</a> /
@@ -236,7 +236,7 @@
                   <p><a id="arxiv23_relax_trigger" href="https://arxiv.org/abs/2311.16646" target="_blank">
                   <heading>Rethinking Backdoor Attacks on Dataset Distillation: A Kernel Method Perspective</heading></a><br>
                   Ming-Yu Chung, <u><b>Sheng-Yen Chou</b></u>, Chia-Mu Yu, Pin-Yu Chen, Sy-Yen Kuo, Tsung-Yi Ho<br>
-                  Submitted to ICLR'24<br>
+                  ICLR 2024<br>
                   <a href="https://arxiv.org/abs/2311.16646" target="_blank">Paper</a> 
                   <!-- / -->
                   <!-- <a href="https://icml.cc/virtual/2021/spotlight/10216" target="_blank">Video</a> /
