--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </font>
               </p>
               <p align=center>
-                <a href="assets/research_cv.pdf" target="_blank"><img src="assets/logo_cv.png" width="32px"></a>  
+                <a href="assets/cv_academic.pdf" target="_blank"><img src="assets/logo_cv.png" width="32px"></a>  
                 <a href="https://scholar.google.com/citations?user=y4L5ImMAAAAJ&hl=zh-TW" target="_blank"><img src="assets/logo_scholar.png" width="32px"></a>  
                 <a href="https://github.com/FrankCCCCC" target="_blank"><img src="assets/logo_github.png" width="32px"></a>  
                 <a href="https://frankccccc.github.io/blog/" target="_blank"><img src="assets/logo_blogger.png" width="32px"></a>
