--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
             <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
               <p align="center">
                 <pageheading>Sheng-Yen Chou</pageheading><br>
-                <b>email</b>: shengyenchou [at] cuhk.edu.hk
+<!--                 <b>email</b>: shengyenchou [at] cuhk.edu.hk -->
+                <b>email</b>: sc3379 [at] cornell.edu
                 <font id="email" style="display:inline;">
                   <noscript><i>Please enable Javascript to view</i></noscript>
                 </font>
