Update index.html, present in Cornell

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
                 <th width="15%" valign="top" align="center">
                 <a href="https://www.cornell.edu/" target="_blank"><img src="assets/logo_cornell.png" alt="sym" width="25%"></a>
-                <p style="line-height:1.3; font-size:12pt">Cornell  University<br>Incomming Ph.D. in CS<br>Sep. 23 - Jun. 28</p>
+                <p style="line-height:1.3; font-size:12pt">Cornell  University<br>Incomming Ph.D. in CS<br>Sep. 23 - Present</p>
                 </th>
 
                 <th width="15%" valign="top" align="center">
@@ -157,7 +157,7 @@
 
                 <th width="15%" valign="top" align="center">
                 <a href="https://www.cuhk.edu.hk/english/index.html" target="_blank"><img src="assets/logo_cuhk.png" alt="sym" width="45%"></a>
-                <p style="line-height:1.3; font-size:12pt">The Chinese University Hong Kong<br>Research Assistant<br>Jul. 22 - Present</p>
+                <p style="line-height:1.3; font-size:12pt">The Chinese University Hong Kong<br>Research Assistant<br>Jul. 22 - Aug. 24</p>
                 </th>
 
                 <th width="15%" valign="top" align="center">
