Add Open to Chat section

--- a/index.html
+++ b/index.html
@@ -173,6 +173,18 @@
           </table>
         </div>
 
+        <!-- =================== Open to Chat =================== -->
+        <div class="content anchor" id="OpenChat">
+          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
+            <tbody><tr><td><sectionheading>&nbsp;&nbsp;Open to Chat</sectionheading></td></tr>
+            </tbody>
+          </table>
+          <span style="line-height:1">
+            Happy to chat~ If you have anything want to talk or help, please book a time slot through <a href="https://calendar.app.google/H93E6KTaQYrUtggTA" target="_blank">this link</a>.
+          </span>
+        </div>
+      </div> <!-- container -->
+
         <!-- =================== Publication =================== -->
         <div class="content anchor" id="publications">
           <!-- <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10"> -->
