Align center, Open to chat sec.

--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
             </tbody>
           </table>
           <span style="line-height:1">
-            Happy to chat~ If you have anything want to talk or help, please book a time slot through <a href="https://calendar.app.google/H93E6KTaQYrUtggTA" target="_blank">this link</a>.
+            <td width="75%" valign="top" align="justify">
+              Happy to chat~ If you have anything want to talk or help, please book a time slot through <a href="https://calendar.app.google/H93E6KTaQYrUtggTA" target="_blank">this link</a>.
+            </td>
           </span>
         </div>
       </div> <!-- container -->
